--- a/schunk_lwa4p_extended/config/controller_sim.yaml
+++ b/schunk_lwa4p_extended/config/controller_sim.yaml
@@ -1,5 +1,5 @@
 arm_controller:
-  type: effort_controllers/JointTrajectoryController
+  type: velocity_controllers/JointTrajectoryController
   topic: "test"
   joints:
      - arm_1_joint
@@ -10,13 +10,13 @@ arm_controller:
      - arm_6_joint
      - arm_7_joint
   gains:
-    arm_1_joint: {p: 400, i: 0.0, d: 30.0, i_clamp: 0.0}
-    arm_2_joint: {p: 900, i: 0.0, d: 30.0, i_clamp: 0.0}
-    arm_3_joint: {p: 330, i: 0.0, d: 10.0, i_clamp: 0.0}
-    arm_4_joint: {p: 200, i: 0.0, d: 10.0, i_clamp: 0.0}
-    arm_5_joint: {p: 80, i: 0.0, d: 0.0, i_clamp: 0.0}
-    arm_6_joint: {p: 80, i: 0.0, d: 0.0, i_clamp: 0.0}
-    arm_7_joint: {p: 80, i: 0.0, d: 0.0, i_clamp: 0.0}
+    arm_1_joint: {p: 500.0, i: 0.0, d: 0.0}
+    arm_2_joint: {p: 500.0, i: 0.0, d: 0.0}
+    arm_3_joint: {p: 100.0, i: 0.0, d: 0.0}
+    arm_4_joint: {p: 100.0, i: 0.0, d: 0.0}
+    arm_5_joint: {p: 100.0, i: 0.0, d: 0.0}
+    arm_6_joint: {p: 100.0, i: 0.0, d: 0.0}
+    arm_7_joint: {p: 100.0, i: 0.0, d: 0.0}
   constraints:
       goal_time: 0.6
       stopped_velocity_tolerance: 0.5
@@ -32,4 +32,11 @@ arm_controller:
   action_monitor_rate: 10
 
 
-
+gazebo_ros_control/pid_gains:
+  arm_1_joint: {p: 500.0, i: 0.0, d: 0.0}
+  arm_2_joint: {p: 500.0, i: 0.0, d: 0.0}
+  arm_3_joint: {p: 100.0, i: 0.0, d: 0.0}
+  arm_4_joint: {p: 100.0, i: 0.0, d: 0.0}
+  arm_5_joint: {p: 5000.0, i: 0.0, d: 0.0}
+  arm_6_joint: {p: 100.0, i: 0.0, d: 0.0}
+  arm_7_joint: {p: 100.0, i: 0.0, d: 0.0}
