--- a/schunk_lwa4p_extended/config/controller_sim_hybrid.yaml
+++ b/schunk_lwa4p_extended/config/controller_sim_hybrid.yaml
@@ -8,9 +8,9 @@ arm_controller:
   max_vel_command_silence: 0.5
   
   # trajectory controller parameters
-  ptp_vel: 1.5 # rad/sec
-  ptp_acc: 0.2 # rad/sec^2
-  max_error: 0.25 # rad
+  ptp_vel: 0.4
+  ptp_acc: 0.2
+  max_error: 0.5
   overlap_time: 0.4
   frequency: 68
   operation_mode: velocity
@@ -57,10 +57,6 @@ arm_7_joint_position_controller:
   joint: arm_7_joint
   pid: {p: 80.0, i: 0.0, d: 0.0, i_clamp: 1.0, i_clamp_min: 0.0, i_clamp_max: 10.0}
 
-
-
-
-
 #velocity controller
 arm_velocity_pid_gains: &arm_velocity_pid_gains
   p: 2000.0
@@ -68,10 +64,11 @@ arm_velocity_pid_gains: &arm_velocity_pid_gains
   i: 1.0
   i_clamp: 1.0
 
+#velocity_controller/JointVelocityController is a simple forward_command_controller without PID
 arm_1_joint_velocity_controller:
   type: velocity_controllers/JointVelocityController
   joint: arm_1_joint
-  pid: {p: 400.0, i: 0.0, d: 0.0, i_clamp: 0.0}
+
 arm_2_joint_velocity_controller:
   type: velocity_controllers/JointVelocityController
   joint: arm_2_joint
@@ -96,3 +93,12 @@ arm_7_joint_velocity_controller:
   type: velocity_controllers/JointVelocityController
   joint: arm_7_joint
   pid: {p: 75.0, i: 0.0, d: 0.0, i_clamp: 0.0}
+  
+gazebo_ros_control/pid_gains:
+  arm_1_joint: {p: 500.0, i: 0.0, d: 0.0}
+  arm_2_joint: {p: 500.0, i: 0.0, d: 0.0}
+  arm_3_joint: {p: 100.0, i: 0.0, d: 0.0}
+  arm_4_joint: {p: 100.0, i: 0.0, d: 0.0}
+  arm_5_joint: {p: 100.0, i: 0.0, d: 0.0}
+  arm_6_joint: {p: 100.0, i: 0.0, d: 0.0}
+  arm_7_joint: {p: 100.0, i: 0.0, d: 0.0}
